[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://snehulak.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 15.3608

[sub_resource type="CylinderShape" id=2]
height = 3.5942

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_ensure_correct_normals = true
params_cull_mode = 1
params_grow = true
params_grow_amount = 0.05
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=5]
next_pass = SubResource( 4 )
params_specular_mode = 3
albedo_color = Color( 0.701961, 0.105882, 0.105882, 1 )

[node name="Enemy" type="KinematicBody" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.980062, 0 )
shape = SubResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="snehulak" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41596, -1.75192 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
